--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
-title: Henry Sun
+title: Henry's blog
 subtitle: 知行合一
-welcome_message: <a href="http://henrysun.tk" target="_blank">Download the theme</a>
+welcome_message: <a href="http://henrysun.tk" target="_blank">Another</a>
 description: 莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马，谁怕？ 一蓑烟雨任平生。
 creator: <a href="http://henrysun.tk">@henrysun</a>
 
@@ -13,7 +13,7 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: red
+cover_color: blue
 
 # The blog button should not be removed.
 blog_button:
