--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,9 @@ comment:
 # Social
 social:
     weibo: sunilsun@163.com
-    github: sunilfsun@gmail.com
-    twitter: sunilfsun@gmail.com
-    gplus: sunilfsun@gmail.com
+    github: sunilsun
+    twitter: sunilfsun
+    gplus: 103534111129310125258
     mail: sunilsun@163.com
 
 # Google Analytics
