--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ comment:
     
 # Social
 social:
-    weibo: sunilsun@163.com
+    # weibo: sunilsun@163.com
     github: sunilsun
     twitter: sunilfsun
     gplus: 103534111129310125258
